# Assignment3

./: .gitignore
ass3_ws/src/cam2image_vm2ros/config/: cam2image.yaml
ass3_ws/src/object_detection_pkg/: CMakeLists.txt  package.xml
ass3_ws/src/object_detection_pkg/include/object_detection_pkg/: object_detection_node.hpp
ass3_ws/src/object_detection_pkg/launch/: sequence_generator_launch.xml
ass3_ws/src/object_detection_pkg/src/: object_detection_node.cpp
ass3_ws/src/position_node/: CMakeLists.txt  package.xml
ass3_ws/src/position_node/src/: position_node.cpp
ass3_ws/src/relbot_simulator/common/: EulerAngles.cpp  EulerAngles.h  MotionProfiles.cpp  MotionProfiles.h  xxfuncs.cpp  xxfuncs.h  xxinteg.cpp  xxinteg.h  xxinverse.cpp  xxinverse.h  xxmatrix.cpp  xxmatrix.h  xxmodel.h  xxtypes.h
ass3_ws/src/relbot_simulator/include/: Plant.h
ass3_ws/src/relbot_simulator/src/: Plant.cpp
ass3_ws/src/sequence_controller/: CMakeLists.txt  package.xml
ass3_ws/src/sequence_controller/launch/: sequence_controller.launch.py
ass3_ws/src/sequence_controller/src/: sequence_controller.cpp
cam2image_host2vm/: README.md  videoserver.py
